# NOSTRUM-SurrogateModel4BladeDesign

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config_HF_Model.txt  config_main.txt
AeroDynFiles/: AeroDynRe1.drv  AeroDynRe2.drv
AeroDynFiles/Airfoils_R10_optim_Re1/: NOSTRUM-15-270-RWT_AF00_Coords.txt  NOSTRUM-15-270-RWT_AF05_Coords.txt  NOSTRUM-15-270-RWT_AF07_Coords.txt  NOSTRUM-15-270-RWT_AF08_Coords.txt  NOSTRUM-15-270-RWT_AF10_Coords.txt  NOSTRUM-15-270-RWT_AF11_Coords.txt  NOSTRUM-15-270-RWT_AF12_Coords.txt  NOSTRUM-15-270-RWT_AF16_Coords.txt  NOSTRUM-15-270-RWT_AF17_Coords.txt  NOSTRUM-15-270-RWT_AF20_Coords.txt  NOSTRUM-15-270-RWT_AF21_Coords.txt  NOSTRUM-15-270-RWT_AF23_Coords.txt  NOSTRUM-15-270-RWT_AF24_Coords.txt  NOSTRUM-15-270-RWT_AF28_Coords.txt  NOSTRUM-15-270-RWT_AF29_Coords.txt  NOSTRUM-15-270-RWT_AF31_Coords.txt  NOSTRUM-15-270-RWT_AF32_Coords.txt  NOSTRUM-15-270-RWT_AF35_Coords.txt  NOSTRUM-15-270-RWT_AF41_Coords.txt
AeroDynFiles/Airfoils_R10_optim_Re2/: NOSTRUM-15-270-RWT_AF02_Coords.txt  NOSTRUM-15-270-RWT_AF03_Coords.txt  NOSTRUM-15-270-RWT_AF04_Coords.txt  NOSTRUM-15-270-RWT_AF06_Coords.txt  NOSTRUM-15-270-RWT_AF09_Coords.txt  NOSTRUM-15-270-RWT_AF13_Coords.txt  NOSTRUM-15-270-RWT_AF14_Coords.txt  NOSTRUM-15-270-RWT_AF15_Coords.txt  NOSTRUM-15-270-RWT_AF18_Coords.txt  NOSTRUM-15-270-RWT_AF19_Coords.txt  NOSTRUM-15-270-RWT_AF22_Coords.txt  NOSTRUM-15-270-RWT_AF25_Coords.txt  NOSTRUM-15-270-RWT_AF26_Coords.txt  NOSTRUM-15-270-RWT_AF27_Coords.txt  (+7 more)
include/: HF_Model.hpp  compute_srbf.hpp  generate_combinations.hpp  generate_param_grid.hpp  quad_interp_horizontal_at_a.hpp  rbf.hpp  read_fast_binary.hpp
src/: HF_Model.cpp  SurrogateModelTraining_NOSTRUM_Blade.cpp  compute_cp_w_torsion_dof.cpp  compute_srbf.cpp  generate_combinations.cpp  generate_param_grid.cpp  quad_interp_horizontal_at_a.cpp  rbf.cpp  read_fast_binary.cpp
(+2 files in other folders)
